[ESNext] Async iteration - Implement async iteration statement: for-await-of https://bugs.webkit.org/show_bug.cgi?id=166698

Reviewed by Yusuke Suzuki.

JSTests:

* stress/async-iteration-for-await-of-syntax.js: Added.
(assert):
(checkSyntax):
(checkSyntaxError):
(checkSimpleAsyncGeneratorSloppyMode):
(checkSimpleAsyncGeneratorStrictMode):
(checkNestedAsyncGenerators):
(checkSimpleAsyncGeneratorSyntaxErrorInStrictMode):
* stress/async-iteration-for-await-of.js: Added.
(assert):
(async.foo):
(async.boo):
(const.boo.async):

Source/JavaScriptCore:

Implementation of the for-await-of statement.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitEnumeration):
(JSC::BytecodeGenerator::emitIteratorNext):
* bytecompiler/BytecodeGenerator.h:
* parser/ASTBuilder.h:
(JSC::ASTBuilder::createForOfLoop):
* parser/NodeConstructors.h:
(JSC::ForOfNode::ForOfNode):
* parser/Nodes.h:
(JSC::ForOfNode::isForAwait const):
* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseForStatement):
* parser/Parser.h:
(JSC::Scope::setSourceParseMode):
(JSC::Scope::setIsFunction):
(JSC::Scope::setIsAsyncGeneratorFunction):
(JSC::Scope::setIsAsyncGeneratorFunctionBody):
* parser/SyntaxChecker.h:
(JSC::SyntaxChecker::createForOfLoop):


Canonical link: https://commits.webkit.org/192775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221358 268f45cc-cd09-0410-ab3c-d52691b4dbfc