Source/JavaScriptCore/parser/Parser.h
@@ -226,8 +226,7 @@ public:
     {
         switch (mode) {
         case SourceParseMode::AsyncGeneratorBodyMode:
-            setIsAsyncFunctionBody();
-            setIsGenerator();
+            setIsAsyncGeneratorFunctionBody();
             break;
         case SourceParseMode::AsyncArrowFunctionBodyMode:
             setIsAsyncArrowFunctionBody();
@@ -248,8 +247,7 @@ public:
 
         case SourceParseMode::AsyncGeneratorWrapperMethodMode:
         case SourceParseMode::AsyncGeneratorWrapperFunctionMode:
-            setIsAsyncFunction();
-            setIsGeneratorFunction();
+            setIsAsyncGeneratorFunction();
             break;
     
         case SourceParseMode::NormalFunctionMode:
@@ -711,6 +709,8 @@ private:
         m_isGeneratorBoundary = false;
         m_isArrowFunctionBoundary = false;
         m_isArrowFunction = false;
+        m_isAsyncFunction = false;
+        m_isAsyncFunctionBoundary = false;
     }
 
     void setIsGeneratorFunction()
@@ -744,6 +744,23 @@ private:
     {
         setIsFunction();
         m_isAsyncFunction = true;
+    }
+
+    void setIsAsyncGeneratorFunction()
+    {
+        setIsFunction();
+        m_isAsyncFunction = true;
+        m_isGenerator = true;
+    }
+
+    void setIsAsyncGeneratorFunctionBody()
+    {
+        setIsFunction();
+        m_hasArguments = false;
+        m_isGenerator = true;
+        m_isGeneratorBoundary = true;
+        m_isAsyncFunction = true;
+        m_isAsyncFunctionBoundary = true;
     }
 
     void setIsAsyncFunctionBody()
